--- a/popup.html
+++ b/popup.html
@@ -1,120 +1,186 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Facebook Post Extractor</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FB Post Extractor</title>
   <style>
-    body {
-      width: 350px;
-      padding: 20px;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      width: 380px;
+      padding: 20px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background: linear-gradient(135deg, #10b981 0%, #059669 100%);
+      color: white;
+    }
+
+    .header {
+      text-align: center;
+      margin-bottom: 20px;
     }
 
     h1 {
-      font-size: 18px;
-      margin: 0 0 15px 0;
-      color: #1877f2;
+      font-size: 20px;
+      margin-bottom: 5px;
     }
 
-    .input-group {
+    .subtitle {
+      font-size: 12px;
+      opacity: 0.9;
+    }
+
+    .form-group {
       margin-bottom: 15px;
     }
 
     label {
       display: block;
       margin-bottom: 5px;
-      font-size: 14px;
-      font-weight: 600;
-      color: #333;
+      font-size: 13px;
+      font-weight: 500;
     }
 
-    input {
+    input[type="text"],
+    input[type="number"],
+    input[type="date"] {
       width: 100%;
-      padding: 8px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
+      padding: 10px;
+      border: none;
+      border-radius: 6px;
       font-size: 14px;
-      box-sizing: border-box;
+      background: rgba(255, 255, 255, 0.9);
+    }
+
+    input[type="text"]::placeholder {
+      color: #999;
+    }
+
+    .hint {
+      font-size: 11px;
+      opacity: 0.8;
+      margin-top: 3px;
+    }
+
+    .buttons {
+      display: flex;
+      gap: 10px;
+      margin-top: 20px;
     }
 
     button {
-      width: 100%;
+      flex: 1;
       padding: 12px;
-      background: #1877f2;
-      color: white;
       border: none;
       border-radius: 6px;
-      font-weight: bold;
-      cursor: pointer;
       font-size: 14px;
-      margin-bottom: 8px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s;
     }
 
-    button:hover {
-      background: #166fe5;
+    button.primary {
+      background: white;
+      color: #10b981;
+    }
+
+    button.primary:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    }
+
+    button.secondary {
+      background: rgba(255, 255, 255, 0.2);
+      color: white;
+    }
+
+    button.secondary:hover {
+      background: rgba(255, 255, 255, 0.3);
     }
 
     button:disabled {
-      background: #ccc;
+      opacity: 0.5;
       cursor: not-allowed;
     }
 
-    #status {
+    .status {
       margin-top: 15px;
       padding: 10px;
-      background: #f0f2f5;
-      border-radius: 4px;
-      font-size: 13px;
-      color: #65676b;
+      border-radius: 6px;
+      font-size: 12px;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.2);
+    }
+
+    .status.hidden {
       display: none;
     }
 
-    #status.show {
-      display: block;
+    .status.success {
+      background: #059669;
     }
 
-    #status.success {
-      background: #d4edda;
-      color: #155724;
-    }
-
-    #status.error {
-      background: #f8d7da;
-      color: #721c24;
-    }
-
-    .btn-secondary {
-      background: #42b72a;
-    }
-
-    .btn-secondary:hover {
-      background: #36a420;
-    }
-
-    #postCount {
-      font-weight: bold;
-      color: #1877f2;
+    .status.error {
+      background: #ef4444;
     }
   </style>
 </head>
 <body>
-  <h1>📝 Facebook Post Extractor</h1>
-
-  <div class="input-group">
-    <label for="profileId">Profile ID:</label>
-    <input type="text" id="profileId" placeholder="100090485289846">
+  <div class="header">
+    <h1>FB Post Extractor</h1>
+    <div class="subtitle">GraphQL API Extraction</div>
   </div>
 
-  <div class="input-group">
-    <label for="maxPosts">Max Posts (0 = all):</label>
-    <input type="number" id="maxPosts" value="10" min="0">
+  <div class="form-group">
+    <label for="profileId">Profile ID</label>
+    <input
+      type="text"
+      id="profileId"
+      placeholder="e.g., 100063643400631"
+    />
+    <div class="hint">Auto-detected from current Facebook page</div>
   </div>
 
-  <button id="extractBtn">🚀 Extract Posts</button>
-  <button id="downloadBtn" class="btn-secondary" style="display:none;">📥 Download JSON</button>
+  <div class="form-group">
+    <label for="keywords">Keywords (separated by comma)</label>
+    <input
+      type="text"
+      id="keywords"
+      placeholder="e.g., cateno, luca, federico, basile"
+    />
+    <div class="hint">Posts with these keywords will be captured as PDF</div>
+  </div>
 
-  <div id="status"></div>
+  <div class="form-group">
+    <label for="maxPosts">Max Posts (0 = all)</label>
+    <input
+      type="number"
+      id="maxPosts"
+      value="10"
+      min="0"
+    />
+    <div class="hint">Number of posts to extract</div>
+  </div>
+
+  <div class="form-group">
+    <label for="stopDate">Stop at date (optional)</label>
+    <input
+      type="date"
+      id="stopDate"
+    />
+    <div class="hint">Will stop when reaching posts before this date</div>
+  </div>
+
+  <div class="buttons">
+    <button id="extractBtn" class="primary">Start Extraction</button>
+    <button id="downloadBtn" class="secondary" style="display:none;">Download JSON</button>
+  </div>
+
+  <div id="status" class="status hidden"></div>
 
   <script src="popup.js"></script>
 </body>
