feat: remove post limit and implement date limit

--- a/popup.html
+++ b/popup.html
@@ -156,23 +156,12 @@
   </div>
 
   <div class="form-group">
-    <label for="maxPosts">Max Posts (0 = all)</label>
-    <input
-      type="number"
-      id="maxPosts"
-      value="10"
-      min="0"
-    />
-    <div class="hint">Number of posts to extract</div>
-  </div>
-
-  <div class="form-group">
-    <label for="stopDate">Stop at date (optional)</label>
+    <label for="stopDate">Stop at date</label>
     <input
       type="date"
       id="stopDate"
     />
-    <div class="hint">Will stop when reaching posts before this date</div>
+    <div class="hint">Will extract all posts until reaching this date</div>
   </div>
 
   <div class="buttons">
